# bevy-template

./: Cargo.toml  README.md  update_schedule_graph.sh
.cargo/: config.toml
codegen/: Cargo.toml
codegen/src/: main.rs
data/: Cargo.toml
data/src/: common.rs  lib.rs  prelude.rs  splashscreen.rs
data/src/common/: global_state.rs  name.rs
game/: Cargo.toml
game/assets/: credits.md
game/src/: main.rs  plugins.rs  prelude.rs
game/src/common/: macros.rs
game/src/plugins/: game.rs  main_menu.rs  splashscreen.rs
